syntax = "proto3";

package com.silhouette.api.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

import "auth.proto";

// Addresses service provides functions for managing addresses.
service Addresses {

    // creates/adds a new address for a user
    rpc CreateAddress(CreateAddressRequest) returns (Address) {
        option (auth_config) = {
            required_scopes: ["w:silhouette:*", "w:silhouette:address:*"]
            self_access_allowed: true
        };
    };

    // updates an existing address for a user
    rpc UpdateAddress(UpdateAddressRequest) returns (Address) {
        option (auth_config) = {
            required_scopes: ["w:silhouette:*", "w:silhouette:address:*"]
            self_access_allowed: true
        };
    };

    // deletes an address for a user
    rpc DeleteAddress(DeleteAddressRequest) returns (google.protobuf.Empty) {
        option (auth_config) = {
            required_scopes: ["w:silhouette:*", "w:silhouette:address:*"]
            self_access_allowed: true
        };
    };
}

// Address represents a physical or mailing address.
message Address {
    string uuid = 1;
    string slug = 2;
    string street_address = 3;
    optional string street_address_2 = 4;
    string city = 5;
    string state_province = 6;
    string postal_code = 7;
    string country = 8;
    bool is_current = 9;
    google.protobuf.Timestamp updated_at = 10;
    google.protobuf.Timestamp created_at = 11;
}

// CreateAddressRequest is a model for the request message for 
//creating a new address.
message CreateAddressRequest {
    string username = 1;
    string street_address = 2;
    optional string street_address_2 = 3;
    string city = 4;
    string state_province = 5;
    string postal_code = 6;
    string country = 7;
    bool is_current = 8;
}

// UpdateRoomeRequest is a model for the request message for 
//updating an address.
message UpdateAddressRequest {
    string username = 1;
    string slug = 2;
    string address_uuid = 3;
    string street_address = 4;
    optional string street_address_2 = 5;
    string city = 6;
    string state_province = 7;
    string postal_code = 8;
    string country = 9;
    bool is_current = 10;
}

// DeleteAddressRequest is a model for the request message for 
// deleting a user's address.
message DeleteAddressRequest {
    string username = 1;
    string slug = 2;
}